trunk/Archive2/2b/4074d423f9547b/output
main.cpp:5:1: error: 'b' does not name a type
 b=10;
 ^
main.cpp:6:1: error: 'a' does not name a type
 a=b+125;
 ^
