trunk/Archive2/2b/4074d423f9547b/main.cpp
#include <iostream>
#include <string>
int count;
float sum;
b=10;
a=b+125;



